@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1068 2009/11/18 15:36:25 mn Exp $
+# $Id: CHANGES,v 1.1069 2009/11/23 12:04:31 mn Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -96,6 +96,8 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.6 (2009/??/??)
+ - (2009/11/23) Fixed bug#4128 - Signature line breaks are stripped in
+    E-Mail-Ticket.
  - (2009/11/18) Fixed bug#4319 - 'no quotable message' error for old messages
     after upgrade.
  - (2009/11/18) Added FastCGI handle for web installer.
